# openreview-cli

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLA.md  COMMERCIAL_LICENSE.md  LICENSE  NOTICE.md  README.md  SECURITY.md  main.py  metrics-pii-v0.1.0.json  metrics-v0.1.0.json  opencode.json  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yml  release.yml
.opencode/commands/: speckit.agent-context.update.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: analysis-context.md  constitution.md  impl-context.md  task-context.md  verified-sources.md
.specify/memory/reports/: 2026-06-23-phase-1-foundation.md  2026-06-24-001-config-storage-foundation.md  2026-06-25-phase-2-document-parsing.md  2026-06-25-phase-3-pii-stripping-foundation.md  2026-06-26-phase-4-ai-gateway.md  _calibration-2026-06-23.md
.specify/scripts/bash/: check-prerequisites.sh
.specify/workflows/: workflow-registry.json
draft/: papers-analysis-part1.md  papers-analysis-part2.md  papers-analysis-part3.md  papers-analysis.md  papers-synthesis.md  product-blueprint.md  products-analysis-part1.md  products-analysis-part2.md  products-analysis.md  spec-edits-005-cli-wizard-redesign.md  spec-edits-006-cli-ux-specification.md  specs-analysis-part1.md  specs-analysis-part2.md  specs-analysis.md
review_results/6cdc3ce0da46/: memo.txt
scripts/: benchmark_legalbenchrag.py  benchmark_pii_stripping.py
specs/001-config-storage-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-config-storage-foundation/checklists/: requirements.md
specs/001-config-storage-foundation/contracts/: auth-schema.json  config-schema.yml  sqlite-schema.sql
specs/002-document-parsing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-document-parsing/checklists/: requirements.md
specs/002-document-parsing/contracts/: stream_clauses.md
specs/003-pii-stripping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-complete-pii-stripping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cli-wizard-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cli-ux-specification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-slm-model-params/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-chunking-strategy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-pii-chunk-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/openreview_cli/: __init__.py  __main__.py  app.py  errors.py  logging_config.py  types.py
tests/: conftest.py
tests/fixtures/: generate_fixtures.py  invalid_config.yml  valid_config.yml
tests/integration/: test_accuracy.py  test_benchmark.py  test_chunking_cli.py  test_chunking_memory.py  test_chunking_performance.py  test_cli_config.py  test_cli_output.py  test_cli_review.py  test_cli_wizard.py  test_config_change.py  test_docx_parser.py  test_error_handling.py  test_gateway_benchmark.py  test_gateway_cli.py  test_gateway_fallback.py  test_gateway_live.py  test_gateway_live_cli.py  test_gateway_privacy.py  test_gateway_routing.py  test_help_output.py  test_memory.py  test_no_pii_flag.py  test_parse_command.py  test_pdf_parser.py  test_pii_accuracy.py  test_pii_error_handling.py  test_pii_memory.py  test_pii_strip_command.py  test_precheck_pii.py  test_review_cli.py  test_setup_command.py  test_stream_clauses.py  test_warnings.py
tests/unit/: test_app.py  test_auth.py  test_chunking_models.py  test_chunking_splitter.py  test_chunking_stream.py  test_chunking_tokenizer.py  test_clause_detector.py  test_cli_client.py  test_cli_config.py  test_config_loader.py  test_database.py  test_docx_parser.py  test_errors.py  test_first_run.py  test_gateway_cost.py  test_gateway_costs.py  test_gateway_engine.py  test_gateway_importer.py  test_gateway_logging.py  test_gateway_models.py  test_gateway_redaction.py  test_gateway_registry.py  test_gateway_router.py  test_gateway_wizard.py  test_memory.py  test_models.py  test_paths.py  test_pdf_parser.py  test_pii_audit.py  test_pii_engine.py  test_pii_mapping.py  test_pii_models.py  test_pii_placeholders.py  test_pii_recognizers.py  test_providers.py  test_readability.py  test_review_wizard.py  test_review_wizard_steps.py  test_ui_colors.py  test_ui_console.py  (+15 more)
(+146 files in other folders)
