[project]
name = "openreview-cli"
version = "0.1.0"
description = "Privacy-first contract review tool"
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
