[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openreview-cli"
version = "0.1.0"
description = "Privacy-first contract review tool"
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "cryptography>=49.0.0",
    "httpx>=0.28.1",
    "litellm>=1.90.1",
    "nupunkt>=0.6.0",
    "platformdirs>=4.10.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
openreview = "openreview_cli.app:app"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openreview_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".tools"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "TCH",
    "RUF",
    "PL",
    "TRY",
]
ignore = [
    "E501",
    "PLC0415",  # lazy imports per constitution Principle III
    "PLR0913",
    "PLR2004",
    "TRY003",   # descriptive exception messages are fine in CLI tools
]
unfixable = ["B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**" = ["PLR0913", "PLR2004", "S101", "PLR0912", "PLR0915", "TC001", "TC003", "RUF012", "RUF059", "SIM115", "N806", "PLW2901", "PLW1510", "F841"]
"scripts/**" = ["PLR0912", "PLR0915", "RUF059"]
"src/openreview_cli/parsing/pdf_parser.py" = ["PLR0912", "PLR0915"]
"src/openreview_cli/parsing/clause_detector.py" = ["PLW0603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
no_implicit_reexport = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselected by default)",
    "integration: marks integration tests (mocked APIs)",
    "e2e: marks end-to-end tests (CLI invocation)",
    "memory: marks memory profiling tests",
    "benchmark: marks benchmark tests",
    "accuracy: marks clause boundary accuracy tests",
]
filterwarnings = ["ignore::DeprecationWarning"]
